# ezaz

./: README  TODO  pyproject.toml  python-ezaz.spec
.copr/: Makefile
ezaz/: __init__.py  __main__.py  actionutil.py  argparse.py  argutil.py  cache.py  config.py  dialog.py  dictnamespace.py  exception.py  filter.py  importclasses.py  importvenv.py  main.py  objproxy.py  qemuimg.py  requiredpackage.py  response.py  schema.py  timing.py
ezaz/azobject/: __init__.py  account.py  azobject.py  completer.py  computesku.py  direct.py  imagedefinition.py  imagegallery.py  imageversion.py  info.py  location.py  marketplaceimage.py  marketplaceimageversion.py  marketplaceoffer.py  marketplacepublisher.py  nic.py  nicipaddr.py  nicpublicip.py  publicip.py  resourcegroup.py  roleassignment.py  roledefinition.py  sku.py  sshkey.py  storageaccount.py  storageblob.py  storagecontainer.py  storagekey.py  subscription.py  user.py  vm.py  vmdisktype.py  vmhosttype.py  vminstancetype.py  vmipaddr.py  vmnic.py  vmpublicip.py  vmsnapshottype.py
ezaz/command/: __init__.py  account.py  bashcomplete.py  cache.py  command.py  config.py  default.py  defaults.py  direct.py  filters.py  image.py  imagedefinition.py  imagegallery.py  imageversion.py  location.py  login.py  logout.py  marketplaceimage.py  marketplaceimageversion.py  marketplaceoffer.py  marketplacepublisher.py  resourcegroup.py  roleassignment.py  roledefinition.py  setup.py  sku.py  sshkey.py  storageaccount.py  storageblob.py  storagecontainer.py  storagekey.py  subscription.py  topology.py  user.py  vm.py
ezaz/config/: vm.py  (+11 more)
(+4 files in other folders)
