[project]
name = "ezaz"
version = "0.0.4"
description = "Eazy Azure CLI"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
authors = [{ name = "Dan Streetman" }, { email = "ddstreet@ieee.org" }]
dependencies = [ "argcomplete >= 3" ]

[project.scripts]
ezaz = "ezaz.main:main"

[project.urls]
"Homepage" = "https://github.com/ddstreet/ezaz"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
